LIFE-1637: Fixed Match Comments widget (MOBILE): adapt image to fit on mobile screen

--- a/src/components/livescore/ls-match-comments/_ls-match-comments.scss
+++ b/src/components/livescore/ls-match-comments/_ls-match-comments.scss
@@ -45,9 +45,14 @@
         padding-right: 10px;
         display: flex;
         justify-content: flex-start;
+        flex-direction: column;
         align-items: center;
         overflow: hidden;
         white-space: normal;
+
+        img{
+          max-width: 100%;
+        }
       }
     }
   }
